# python_labs

./: .coverage  README.md  pyproject.toml  Задача 1  ЭТОВТОРОЙ
data/: in.txt  out.csv
data/lab05/input/: first.json
data/lab06/in/: lol.json  txt
data/lab08/: students_input.json
src/: 02.py  03.py  04  05  06.py  07.py
src/lab01/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  README.md
src/lab02/: README.md  arrays.py  matrix.py  tuples.py
src/lab03/: A.py  README.md  text  text.py  text_stats.py
src/lab04/: B.py  README.md  io_txt_csv.py  report.csv  text  text_report.py
src/lab05/: B.xlsx  README.md  csv_to_xlsx.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab08/: models.py  serialize.py
src/lib/: text.py
tests/: test_json_csv.py  test_text.py  tests_text.py
